# easyvk

./: CMakeLists.txt
cmake/: EasyVKConfig.cmake.in
example/: CMakeLists.txt  vect-add.cinit  vect-add.cpp
src/: easyvk.cpp  easyvk.h
